# ruplacer

./: .gitignore  .travis.yml  Brewfile  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO  build.rs  gen_artifacts.py  skyspell-ignore.toml  skyspell.yml  tbump.toml
.github/workflows/: audit.yml  lint.yml  release.yml  test.yml
ci/: check.sh  gen_artifacts.py  gen_artifacts.sh
formula/: ruplacer.rb
src/: app.rs  console.rs  directory_patcher.rs  errors.rs  file_patcher.rs  lib.rs  line_patcher.rs  main.rs  query.rs  replacer.rs  settings.rs  stats.rs
src/directory_patcher/: path_deduplicator.rs
src/replacer/: file_replacer.rs  mod.rs
tests/: integration_tests.rs
tests/data/: .gitignore  .hidden.txt  ignore.txt  no-newline  top.txt
tests/data/a_dir/: nomatch.txt
tests/data/a_dir/sub/: foo.txt
