[package]
name = "ruplacer"
version = "0.6.2"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
description = "Find and replace text in source files"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"
keywords = ["ruplacer", "find", "grep", "command", "line"]
categories = ["command-line-utilities"]
repository = "https://github.com/dmerejkowsky/ruplacer"

[package.metadata.deb]
extended-description = "Find and replace text in source files"

[dependencies]
ignore = "0.4"
structopt = "0.2"
colored = "2.0"
regex = "1"
isatty = "0.1"
Inflector = "0.11"
anyhow = "1.0.32"


[dev-dependencies]
tempdir = "0.3"
