[package]
name = "ruplacer"
version = "0.6.2"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
description = "Find and replace text in source files"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"
keywords = ["ruplacer", "find", "grep", "command", "line"]
categories = ["command-line-utilities"]
repository = "https://github.com/dmerejkowsky/ruplacer"

[package.metadata.deb]
extended-description = "Find and replace text in source files"

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
clap = { version = "3.0.7", features = ["derive"] }
colored = "2.0"
ignore = "0.4"
Inflector = "0.11"
regex = "1.5.1"


[dev-dependencies]
tempfile = "3.2"

[features]
